<?xml version="1.0" encoding="UTF-8"?>

    <android.support.v4.widget.DrawerLayout android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/drawer_layout" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" tools:context=".BMIActivity" android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar android:layout_height="?attr/actionBarSize" android:layout_width="match_parent" android:id="@+id/mainToolbar" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:elevation="4dp" android:background="@color/colorPrimary"/>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:layout_marginTop="30dp">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvBmiWeight" android:textAlignment="center" android:text="@string/weight" android:layout_weight="1"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvBmiHeight" android:textAlignment="center" android:text="@string/height" android:layout_weight="1"/>

</LinearLayout>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/etBmiWeight" android:textAlignment="center" android:layout_weight="2" android:inputType="number" android:ems="10"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/etBmiHeight" android:textAlignment="center" android:layout_weight="2" android:inputType="number" android:ems="10"/>

</LinearLayout>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btCalculateBmi" android:text="@string/calculate" android:onClick="BMI" android:layout_margin="30dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tvBmiTitle" android:textAlignment="center" android:layout_margin="20dp" android:textSize="25sp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tvBmiBody" android:textAlignment="center" android:layout_margin="20dp" android:textSize="18sp"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btBmiDetails" android:layout_marginTop="40dp" android:text="@string/details" android:onClick="Details"/>

</LinearLayout>

    <android.support.design.widget.NavigationView android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/nav_view" app:headerLayout="@layout/nav_header" app:menu="@menu/side_drawer" android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>