<?xml version="1.0" encoding="UTF-8"?>

    <android.support.v4.widget.DrawerLayout android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/drawer_layout" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    -<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" tools:context=".BodyCalculatorActivity" android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar android:layout_height="?attr/actionBarSize" android:layout_width="match_parent" android:id="@+id/mainToolbar" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:elevation="4dp" android:background="@color/colorPrimary"/>


    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" android:paddingTop="20dp" android:gravity="center_horizontal">


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:text="@string/activity_level" android:paddingLeft="10dp" android:layout_weight=".2"/>

    <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/activityLevelSpinner" android:gravity="center" android:layout_weight=".8"/>

</LinearLayout>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvMaintenenceCalories" android:textSize="20sp" android:textAlignment="center"/>


    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:padding="10dp">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvGoalWeight" android:text="@string/goal_weight" android:layout_weight="1"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/etGoalWeight" android:layout_weight=".2" android:inputType="number" android:ems="10"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:padding="10dp">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvDeficit" android:text="@string/deficit" android:layout_weight="1"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/etDeficit" android:layout_weight=".2" android:inputType="number" android:ems="10"/>

</LinearLayout>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btBodyCalculate" android:text="@string/calculate" android:onClick="CalculateDays" android:layout_marginTop="20dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tvDaysToReachGoal" android:paddingTop="20dp" android:textSize="20sp" android:textAlignment="center" android:layout_marginTop="10dp"/>

</LinearLayout>

</LinearLayout>

    <android.support.design.widget.NavigationView android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/nav_view" app:headerLayout="@layout/nav_header" app:menu="@menu/side_drawer" android:layout_gravity="start"/>

</android.support.v4.widget.DrawerLayout>